# EpidemicSpreadGraph

./: .gitignore  Agent.h  CMakeLists.txt  Graph.h  makefile  memoryleak.txt  testsResults.txt
AutoTests/: FiveRuleTestTree.cpp  Main.cpp  Tester.cpp  Tester.h
include/: Agent.h  Graph.h  Session.h  Tree.h
jsons/examples/: config2.json  config3.json  config4.json  config_test4.json  treeMainStudents.cpp
src/: Agent.cpp  Graph.cpp  Graph.h  Session.cpp  Session.h  Tree.cpp  main.cpp  origMain.cpp
test/include/: CreateTree.h  SessionTests.h  TestMain.h  TreeTests.h
test/src/: CreateTree.cpp  SessionTests.cpp  TestMain.cpp  TreeTests.cpp  main.cpp  testsMain.cpp
